[package]
name = "rocket-webapi"
version = "0.1.0"
authors = ["KatsuNakajima <40666782+katsuNakajima@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }